--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -5,10 +5,12 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: Publish Snapshots
 
 on:
-  push
+  push:
+    branches:
+      - 'master'
 
 jobs:
   build:
@@ -36,7 +38,7 @@ jobs:
 
     # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
     # the publishing section of your build.gradle
-    - name: Publish to GitHub Packages
+    - name: Publish to Dairy Snapshots
       run: ./gradlew publishAllPublicationsToDairySnapshotsRepository
       env:
         dairySnapshotsUsername: ${{ secrets.SNAPSHOTS_USERNAME  }}
