Revert "Update snapshots.yml"
This reverts commit d4fe3176b0f1a58d3cf429327da22028b8b97416.

--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -43,5 +43,5 @@ jobs:
     - name: Publish to Dairy Snapshots
       run: ./gradlew publishAllPublicationsToDairySnapshotsRepository
       env:
-        SNAPSHOTS_USERNAME: ${{ secrets.SNAPSHOTS_USERNAME  }}
-        SNAPSHOTS_PASSWORD: ${{ secrets.SNAPSHOTS_PASSWORD }}
+        dairySnapshotsUsername: ${{ secrets.SNAPSHOTS_USERNAME  }}
+        dairySnapshotsPassword: ${{ secrets.SNAPSHOTS_PASSWORD }}
